restructing internals folder, updating middleware, validations to login function
