# docs/swagger.json
@@ -93,14 +93,14 @@
                 }
             }
         },
-        "/user/{id}": {
+        "/user/me": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get a user by ID",
+                "description": "Get a user by apiKey",
                 "consumes": [
                     "application/json"
                 ],
@@ -110,7 +110,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Get User by ID",
+                "summary": "Get User by apiKey",
                 "parameters": [
                     {
                         "type": "string",
@@ -202,6 +202,7 @@
     },
     "securityDefinitions": {
         "Bearer Authentication": {
+            "description": "Please provide a valid JWT token with Bearer prefix",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
